--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a-marker preset="hiro">
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity position="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#taj"></a-entity>
+          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#taj"></a-entity>
         </a-entity>
       </a-entity>
     </a-marker>
