--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a-entity>
       </a-entity>
     </a-marker>
-    <a-entity camera></a-entity>
+    <a-entity camera><a-cursor></a-cursor></a-entity>
   </a-scene>
 
 
