trying project path src

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <a-scene  embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline>
     <a-assets>
-      <a-asset-item id="wonder" src="scene.gltf"></a-asset-item>
+      <a-asset-item id="wonder"></a-asset-item>
     </a-assets>
     <a-marker preset="hiro">
       <a-entity scale="0.08 0.08 0.08">
