--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
     <a-assets>
       <a-asset-item id="wonder" src=""></a-asset-item>
     </a-assets>
-    <a-marker preset="hiro">
+    <!-- <a-marker preset="hiro">
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
           <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#wonder"></a-entity>
         </a-entity>
       </a-entity>
-    </a-marker>
+    </a-marker> -->
+    <a-marker-camera preset='custom' url='pattern-one.patt'>
+
+
+    <!-- <a-marker preset="kanji"> -->
+      <a-entity scale="0.08 0.08 0.08">
+        <a-entity mmd='outline: true' afterglow:2.0;>
+          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#wonder"></a-entity>
+        </a-entity>
+      </a-entity>
+    <!-- </a-marker> -->
+    </a-marker-camera>
+
     <a-entity camera></a-entity>
   </a-scene>
 
