Trying out plain pattern marker

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a-entity>
       </a-entity>
     </a-marker> -->
-    <a-marker-camera preset='custom' url='pattern-one.patt'>
+    <a-marker preset='custom' url='pattern-one.patt'>
 
 
     <!-- <a-marker preset="kanji"> -->
@@ -28,7 +28,7 @@
         </a-entity>
       </a-entity>
     <!-- </a-marker> -->
-    </a-marker-camera>
+    </a-marker>
 
     <a-entity camera></a-entity>
   </a-scene>
