--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a-entity>
       </a-entity>
     </a-marker> -->
-    <a-marker preset='custom' url='pattern-one.patt'>
+    <a-marker type='pattern' url='pattern-one.patt'>
 
 
     <!-- <a-marker preset="kanji"> -->
