--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
     <a-assets>
       <a-asset-item id="wonder" src=""></a-asset-item>
     </a-assets>
-    <!-- <a-marker preset="hiro">
+    <a-marker preset="hiro">
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
           <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#wonder"></a-entity>
         </a-entity>
       </a-entity>
-    </a-marker> -->
-    <a-marker type='pattern' url='pattern-one.patt'>
+    </a-marker>
 
+    <a-marker preset="kanji">
+      <a-entity scale="0.08 0.08 0.08">
+        <a-entity mmd='outline: true' afterglow:2.0;>
+          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#wonder"></a-entity>
+        </a-entity>
+      </a-entity>
+    </a-marker>
 
+    <a-marker type='pattern' patternUrl='pattern-one.patt'>
     <!-- <a-marker preset="kanji"> -->
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
