--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </a-entity>
     </a-marker>
 
-    <a-marker type='pattern' patternUrl='pattern-one.patt' url='pattern-one.patt'>
+    <a-marker type='pattern' patternUrl='https://raw.githubusercontent.com/karannavani/ar-test/master/pattern-one.patt' url='https://raw.githubusercontent.com/karannavani/ar-test/master/pattern-one.patt>
     <!-- <a-marker preset="kanji"> -->
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
