commented out customer pattern

--- a/index.html
+++ b/index.html
@@ -37,15 +37,13 @@
 
 
 
-    <a-marker type='pattern' patternUrl='https://raw.githubusercontent.com/karannavani/ar-test/master/pattern-one.patt' url='https://raw.githubusercontent.com/karannavani/ar-test/master/pattern-one.patt'>
-    <!-- <a-marker preset="kanji"> -->
+    <!-- <a-marker type='pattern' patternUrl='https://raw.githubusercontent.com/karannavani/ar-test/master/pattern-one.patt' url='https://raw.githubusercontent.com/karannavani/ar-test/master/pattern-one.patt'>
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
           <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#wonder"></a-entity>
         </a-entity>
       </a-entity>
-    <!-- </a-marker> -->
-    </a-marker>
+    </a-marker> -->
 
 
 
