--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <a-scene  embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline>
     <a-assets>
       <a-asset-item id="taj" src="models/taj/scene.gltf"></a-asset-item>
+      <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
     </a-assets>
     <a-marker preset="hiro">
       <a-entity scale="0.08 0.08 0.08">
@@ -18,10 +19,17 @@
         </a-entity>
       </a-entity>
     </a-marker>
+    <a-marker preset="kanji">
+      <a-entity scale="0.08 0.08 0.08">
+        <a-entity mmd='outline: true' afterglow:2.0;>
+          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#petra"></a-entity>
+        </a-entity>
+      </a-entity>
+    </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 
-  <a-scene  embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline>
+  <!-- <a-scene  embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline>
     <a-assets>
       <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
     </a-assets>
@@ -33,7 +41,7 @@
       </a-entity>
     </a-marker>
     <a-entity camera></a-entity>
-  </a-scene>
+  </a-scene> -->
 
 
 
