--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <a-assets>
       <a-asset-item id="taj" src="models/taj/scene.gltf"></a-asset-item>
       <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
+      <a-asset-item id="christ" src="models/christ/scene.gltf"></a-asset-item>
     </a-assets>
     <a-marker preset="hiro">
       <a-entity scale="0.08 0.08 0.08">
@@ -23,6 +24,13 @@
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
           <a-entity rotation="-90 0 0" scale="0.8 0.8 0.8" gltf-model="#petra"></a-entity>
+        </a-entity>
+      </a-entity>
+    </a-marker>
+    <a-marker type='pattern' patternUrl='https://raw.githubusercontent.com/karannavani/ar-test/master/pattern-one.patt' url='https://raw.githubusercontent.com/karannavani/ar-test/master/pattern-one.patt'>
+      <a-entity scale="0.08 0.08 0.08">
+        <a-entity mmd='outline: true' afterglow:2.0;>
+          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#christ"></a-entity>
         </a-entity>
       </a-entity>
     </a-marker>
