added new custom marker

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </a-entity>
       </a-entity>
     </a-marker>
-    <a-marker type='barcode' value='5'>
+    <a-marker preset='custom' type='pattern' url='pattern-marker.patt'>
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
           <a-entity rotation="-90 0 0" scale="2 2 2" gltf-model="#christ"></a-entity>
