trying barcode vs custom

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         </a-entity>
       </a-entity>
     </a-marker>
+    <a-marker preset='area' type='barcode' value="5">
+      <a-entity scale="0.08 0.08 0.08">
+        <a-entity mmd='outline: true' afterglow:2.0;>
+          <a-entity rotation="-90 0 0" scale="2 2 2" gltf-model="#christ"></a-entity>
+        </a-entity>
+      </a-entity>
+    </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 
