trying barcode detection

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <a-asset-item id="christ" src="models/christ/scene.gltf"></a-asset-item> -->
       <a-asset-item id="wonder" src=""></a-asset-item>
     </a-assets>
-    <a-marker preset="hiro">
-      <a-entity scale="0.08 0.08 0.08" type='barcode' value="5">
+    <a-marker type='barcode' value="5">
+      <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
           <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#wonder"></a-entity>
         </a-entity>
