--- a/index.html
+++ b/index.html
@@ -7,41 +7,40 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 
-  <a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;' embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline >
+  <a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
     <a-assets>
-      <!-- <a-asset-item id="taj" src="models/taj/scene.gltf"></a-asset-item>
+      <a-asset-item id="taj" src="models/taj/scene.gltf"></a-asset-item>
       <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
-      <a-asset-item id="christ" src="models/christ/scene.gltf"></a-asset-item> -->
-      <a-asset-item id="wonder" src=""></a-asset-item>
+      <a-asset-item id="christ" src="models/christ/scene.gltf"></a-asset-item>
     </a-assets>
-    <a-marker type='barcode' value="5">
+    <a-marker preset="hiro">
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#wonder"></a-entity>
+          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#taj"></a-entity>
         </a-entity>
       </a-entity>
     </a-marker>
-    <!-- <a-marker preset="kanji">
+    <a-marker preset="kanji">
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
           <a-entity rotation="-90 0 0" scale="0.8 0.8 0.8" gltf-model="#petra"></a-entity>
         </a-entity>
       </a-entity>
     </a-marker>
-    <a-marker preset='custom' type='pattern' url='pattern-marker.patt'>
-      <a-entity scale="0.08 0.08 0.08">
-        <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="2 2 2" gltf-model="#christ"></a-entity>
-        </a-entity>
-      </a-entity>
-    </a-marker>
-    <a-marker preset='area' type='barcode' value="5">
+    <!-- <a-marker preset='custom' type='pattern' url='pattern-marker.patt'>
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
           <a-entity rotation="-90 0 0" scale="2 2 2" gltf-model="#christ"></a-entity>
         </a-entity>
       </a-entity>
     </a-marker> -->
+    <a-marker preset='area' type='barcode' value="5">
+      <a-entity scale="0.08 0.08 0.08">
+        <a-entity mmd='outline: true' afterglow:2.0;>
+          <a-entity rotation="-90 0 0" scale="2 2 2" gltf-model="#christ"></a-entity>
+        </a-entity>
+      </a-entity>
+    </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
 
