--- a/index.html
+++ b/index.html
@@ -1,93 +1,25 @@
-<!doctype HTML>
+<!DOCTYPE html>
 <html>
 <head>
-  <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
-  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
-  <script src="app.js" charset="utf-8"></script>
+  <meta charset="utf-8">
+  <title></title>
+  <!-- include A-Frame obviously -->
+  <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+  <!-- include ar.js for A-Frame -->
+  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
-
-  <a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
-    <!-- <a-assets>
-      <a-asset-item id="taj" src="models/taj/scene.gltf"></a-asset-item>
-      <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
-      <a-asset-item id="christ" src="models/christ/scene.gltf"></a-asset-item>
-    </a-assets> -->
+  <<a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
     <!-- create your content here. just a box for now -->
     <a-box color="red" position='0 0.5 0' material='opacity: 0.5;'></a-box>
     <!-- define a camera which will move according to the marker position -->
-    <a-marker preset='hiro'></a-marker>
+    <a-marker-camera preset='hiro'></a-marker-camera>
 
     <a-marker type='barcode' value='7'>
       <a-box position='0 0.5 0' material='color: blue;'></a-box>
     </a-marker>
 
   </a-scene>
-
-
-
-    <!-- OLD -->
-
-    <!-- <a-marker preset="hiro">
-      <a-entity scale="0.08 0.08 0.08">
-        <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#taj"></a-entity>
-        </a-entity>
-      </a-entity>
-    </a-marker>
-
-    <a-marker preset="kanji">
-      <a-entity scale="0.08 0.08 0.08">
-        <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="0.8 0.8 0.8" gltf-model="#petra"></a-entity>
-        </a-entity>
-      </a-entity>
-    </a-marker>
-
-    <a-marker preset='area' type='barcode' value="5">
-      <a-entity scale="0.08 0.08 0.08">
-        <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="2 2 2" gltf-model="#christ"></a-entity>
-        </a-entity>
-      </a-entity>
-    </a-marker>
-    <a-entity camera></a-entity>
-  </a-scene> -->
-
-
- <!-- OLDER -->
-
-
-  <!-- <a-scene  embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline>
-    <a-assets>
-      <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
-    </a-assets>
-    <a-marker preset="kanji">
-      <a-entity scale="0.08 0.08 0.08">
-        <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#petra"></a-entity>
-        </a-entity>
-      </a-entity>
-    </a-marker>
-    <a-entity camera></a-entity>
-  </a-scene> -->
-
-
-
-    <!-- <a-marker type='pattern' patternUrl='https://raw.githubusercontent.com/karannavani/ar-test/master/pattern-one.patt' url='https://raw.githubusercontent.com/karannavani/ar-test/master/pattern-one.patt'>
-      <a-entity scale="0.08 0.08 0.08">
-        <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#wonder"></a-entity>
-        </a-entity>
-      </a-entity>
-    </a-marker> -->
-
-
-
-
-  <!-- <a-box position='0 0.5 0' material='color: black;'></a-box> -->
-  <!-- <a-image position='0 2 0'src="https://pbs.twimg.com/profile_images/944609203397758976/9nagXxdM_400x400.jpg"></a-image> -->
-
 </body>
 </html>
