--- a/index.html
+++ b/index.html
@@ -10,14 +10,31 @@
 </head>
 <body style='margin : 0px; overflow: hidden;'>
   <<a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+    <a-assets>
+      <a-asset-item id="taj" src="models/taj/scene.gltf"></a-asset-item>
+      <!-- <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
+      <a-asset-item id="christ" src="models/christ/scene.gltf"></a-asset-item> -->
+
+    </a-assets>
 
     <!-- create your content here. just a box for now -->
-    <a-box color="red" position='0 0.5 0' material='opacity: 0.5;'></a-box>
+    <a-box color="red" position='0 0 0' material='opacity: 0.5;'></a-box>
     <!-- define a camera which will move according to the marker position -->
-    <a-marker-camera preset='hiro'></a-marker-camera>
+    <a-marker preset='hiro'></a-marker>
 
     <a-marker type='barcode' value='7'>
-      <a-box position='0 0.5 0' material='color: blue;'></a-box>
+      <a-entity scale="0.08 0.08 0.08">
+        <a-entity mmd='outline: true' afterglow:2.0;>
+          <a-entity rotation="-90 0 0" scale="0.8 0.8 0.8" gltf-model="#taj"></a-entity>
+        </a-entity>
+      </a-entity>
+    <a-marker type='barcode' value='5'>
+      <a-entity scale="0.08 0.08 0.08">
+        <a-entity mmd='outline: true' afterglow:2.0;>
+          <a-entity rotation="-90 0 0" scale="0.8 0.8 0.8" gltf-model="#taj"></a-entity>
+        </a-entity>
+      </a-entity>
+      <!-- <a-box position='0 0.5 0' material='color: blue;'></a-box> -->
     </a-marker>
 
   </a-scene>
