--- a/index.html
+++ b/index.html
@@ -17,17 +17,13 @@
 
     </a-assets>
 
-    <!-- create your content here. just a box for now -->
-    <a-box color="red" position='0 0 0' material='opacity: 0.5;'></a-box>
-    <!-- define a camera which will move according to the marker position -->
-    <a-marker preset='hiro'></a-marker>
-
     <a-marker type='barcode' value='7'>
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
           <a-entity rotation="-90 0 0" scale="0.8 0.8 0.8" gltf-model="#taj"></a-entity>
         </a-entity>
       </a-entity>
+      
     <a-marker type='barcode' value='5'>
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
@@ -36,7 +32,7 @@
       </a-entity>
       <!-- <a-box position='0 0.5 0' material='color: blue;'></a-box> -->
     </a-marker>
-
+ <a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
