--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
-  <<a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+  <<a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;' embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline>
     <a-assets>
       <a-asset-item id="taj" src="models/taj/scene.gltf"></a-asset-item>
       <!-- <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
