--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
-<!DOCTYPE html>
+<!doctype HTML>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <!-- include A-Frame obviously -->
   <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
-  <!-- include ar.js for A-Frame -->
-  <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+  <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+  <script src="app.js" charset="utf-8"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
-  <<a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;' embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline>
+
+  <a-scene  embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline>
     <a-assets>
       <a-asset-item id="taj" src="models/taj/scene.gltf"></a-asset-item>
-      <!-- <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
-      <a-asset-item id="christ" src="models/christ/scene.gltf"></a-asset-item> -->
-
     </a-assets>
-
-    <a-marker type='barcode' value='7'>
+    <a-marker preset="hiro">
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="0.08 0.08 0.08" gltf-model="#taj"></a-entity>
+          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#taj"></a-entity>
         </a-entity>
       </a-entity>
-
-    <a-marker type='barcode' value='5'>
-      <a-entity scale="0.08 0.08 0.08">
-        <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="0.08 0.08 0.08" gltf-model="#taj"></a-entity>
-        </a-entity>
-      </a-entity>
-      <!-- <a-box position='0 0.5 0' material='color: blue;'></a-box> -->
     </a-marker>
- <a-entity camera></a-entity>
+    <a-entity camera></a-entity>
   </a-scene>
+
+  <a-scene  embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline>
+    <a-assets>
+      <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
+    </a-assets>
+    <a-marker preset="kanji">
+      <a-entity scale="0.08 0.08 0.08">
+        <a-entity mmd='outline: true' afterglow:2.0;>
+          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#petra"></a-entity>
+        </a-entity>
+      </a-entity>
+    </a-marker>
+    <a-entity camera></a-entity>
+  </a-scene>
+
+
 </body>
 </html>
