--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
-  <script src="app.js" charset="utf-8"></script>
+  <!-- <script src="app.js" charset="utf-8"></script> -->
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 
