--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!doctype HTML>
 <html>
 <head>
   <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
-  <!-- <script src="app.js" charset="utf-8"></script> -->
+  <script src="app.js" charset="utf-8"></script>
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 
@@ -11,6 +12,8 @@
     <a-assets>
       <a-asset-item id="taj" src="models/taj/scene.gltf"></a-asset-item>
     </a-assets>
+
+    
     <a-marker preset="hiro">
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
@@ -18,23 +21,15 @@
         </a-entity>
       </a-entity>
     </a-marker>
+
+
+
     <a-entity camera></a-entity>
   </a-scene>
 
-  <a-scene  embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline>
-    <a-assets>
-      <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
-    </a-assets>
-    <a-marker preset="kanji">
-      <a-entity scale="0.08 0.08 0.08">
-        <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#petra"></a-entity>
-        </a-entity>
-      </a-entity>
-    </a-marker>
-    <a-entity camera></a-entity>
-  </a-scene>
 
+  <!-- <a-box position='0 0.5 0' material='color: black;'></a-box> -->
+  <!-- <a-image position='0 2 0'src="https://pbs.twimg.com/profile_images/944609203397758976/9nagXxdM_400x400.jpg"></a-image> -->
 
 </body>
 </html>
