commented out app.js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
-  <script src="app.js" charset="utf-8"></script>
+  <!-- <script src="app.js" charset="utf-8"></script> -->
 </head>
 <body style='margin : 0px; overflow: hidden;'>
 
@@ -13,7 +13,7 @@
       <a-asset-item id="taj" src="models/taj/scene.gltf"></a-asset-item>
     </a-assets>
 
-    
+
     <a-marker preset="hiro">
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
