--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
       </a-entity>
     </a-marker>
 
+    <a-marker preset="kanji">
+      <a-entity scale="0.08 0.08 0.08">
+        <a-entity mmd='outline: true' afterglow:2.0;>
+          <a-entity rotation="-90 0 0" scale="0.2 0.2 0.2" gltf-model="#taj"></a-entity>
+        </a-entity>
+      </a-entity>
+    </a-marker>
+
 
 
     <a-entity camera></a-entity>
