--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <a-scene  embedded artoolkit='sourceType: webcam; sourceWidth: 240; sourceHeight: 180;' antialias="true" outline>
     <a-assets>
       <a-asset-item id="taj" src="models/taj/scene.gltf"></a-asset-item>
+      <a-asset-item id="petra" src="models/petra/scene.gltf"></a-asset-item>
     </a-assets>
 
 
     <a-marker preset="hiro">
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="0.4 0.4 0.4" gltf-model="#taj"></a-entity>
+          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#taj"></a-entity>
         </a-entity>
       </a-entity>
     </a-marker>
@@ -25,7 +26,7 @@
     <a-marker preset="kanji">
       <a-entity scale="0.08 0.08 0.08">
         <a-entity mmd='outline: true' afterglow:2.0;>
-          <a-entity rotation="-90 0 0" scale="0.2 0.2 0.2" gltf-model="#taj"></a-entity>
+          <a-entity rotation="-90 0 0" scale="0.1 0.1 0.1" gltf-model="#petra"></a-entity>
         </a-entity>
       </a-entity>
     </a-marker>
